[package]
name = "atomic-sim"
version = "0.1.0"
authors = ["Nathan Dobson <nadobson@mac.com>"]
edition = "2018"

[dependencies]
llvm-ir = { version = "0.7.2", features = ["llvm-10"] }
either = "1.6.1"
rand_xorshift = "0.2.0"
rand = "0.7.3"
libc = "0.2.80"
defer = "0.1.0"
bitvec = "0.19.4"
itertools = "0.9.0"
vec_map = "0.8.2"
rangemap = "0.1.8"
lazy_static = "1.4.0"


[dependencies.smallvec]
version = "1.5.1"
features = ["union", "specialization"]

[dev-dependencies]
futures = "0.3.8"


[features]
timer = []

[profile.release]
debug = true
